Cleanup, Reduces Exe File Size by ~~2kb

--- a/Source Code/PJ64.rc
+++ b/Source Code/PJ64.rc
@@ -227,7 +227,7 @@ BEGIN
     CONTROL         "Use ROM Browser",IDC_USE_ROMBROWSER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,68,97,10
     CONTROL         "Use Directory recursion",IDC_RECURSION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,121,68,96,10
     LTEXT           "Available fields",IDC_ROMSEL_TEXT5,9,85,77,8
-    LISTBOX         IDC_AVALIABLE,9,97,80,80,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_AVAILABLE,9,97,80,80,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Show fields in this order:",IDC_ROMSEL_TEXT6,142,85,81,8
     LISTBOX         IDC_USING,141,97,81,66,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Add ->",IDC_ADD,93,97,45,12
