RSP and App Size Improvements, Zelda64 Retail and Hacks RBA Cheat Support, Releases Text For Maintenance/Dev, Remove My Added Linking Defines For Where UseTLB=No Because That Crash Prevention Method Doesn't Work When UseTLB=No As Seen in The Legend of Zelda Ocarina of Time Versions 1.x

--- a/Source Code/Project64.vcxproj
+++ b/Source Code/Project64.vcxproj
@@ -41,7 +41,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release External|Win32'">
     <ClCompile>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>MinSpace</Optimization>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <WarningLevel>Level3</WarningLevel>
       <AdditionalIncludeDirectories>C:\Development\PJ64 Source C++ 6.0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -57,6 +57,7 @@
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <StringPooling>true</StringPooling>
       <FunctionLevelLinking>true</FunctionLevelLinking>
+      <FavorSizeOrSpeed>Size</FavorSizeOrSpeed>
     </ClCompile>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
