2025 New Years (See Description)
Change to 2025 year across appname, 1.7.0.471 V1.6.2 in name and basicmode registry location, uninstaller files, internal language, and DB files

Add textures folder to bad plugins installer for Jabo 1.7 texture packs usage

Fixed rom browser not being updated post factory reset

Clarify ANGLE for SM64 hacks (accidentally removed in prerelease)

Wizard Text Tweak

Remove RDX/EDB code because it is entirely unecessary and I am trying to reduce file size as much as possible for sleek package here, the RDX also contained incomplete entries and lacked some info and I would rather only include complete work

Zelda cheats tweak

User Guide updates

README update

Fix internal typo

Remove unecessary includes used for RDX stuff

Clean up resource header again

Remove unused cdbdev define in main headers

Set cache file as new .bdb as an acronym for browser database since it stores browser information

Make appropriate RC changes to account for RDX removal

Make appropriate language header and ldb numbering changes (this was incredibly tedious but I'm happy with the result)

Remove unnecessary brackets that were accidentally leftover in the prerelease

Reshift the width of rom browser notes to fill perfectly and evenly on 1920 px displays

Remove countrycode functions formerly being used by RDX/EDB

--- a/Source Code/PJ64.rc
+++ b/Source Code/PJ64.rc
@@ -70,13 +70,12 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_AUS
 // Dialog
 //
 
-ROM_INFO_DIALOG DIALOGEX 0, 0, 229, 202
+ROM_INFO_DIALOG DIALOGEX 0, 0, 229, 147
 STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "ROM Information"
 FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Close",IDC_CLOSE_BUTTON,159,180,64,14
-    GROUPBOX        "",IDC_STATIC,6,0,217,175
+    GROUPBOX        "",IDC_STATIC,6,-26,217,175
     LTEXT           "ROM Name:",IDC_ROM_NAME,11,16,64,9
     EDITTEXT        IDC_INFO_ROMNAME,77,15,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
     LTEXT           "File Name:",IDC_FILE_NAME,11,31,64,9
@@ -85,16 +84,12 @@ BEGIN
     EDITTEXT        IDC_INFO_ROMSIZE,77,60,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
     LTEXT           "Cartridge ID:",IDC_CART_ID,11,76,64,9
     EDITTEXT        IDC_INFO_CARTID,77,75,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
-    LTEXT           "Manufacturer:",IDC_MANUFACTURER,11,92,64,9
-    EDITTEXT        IDC_INFO_MANUFACTURER,77,90,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
-    LTEXT           "Country:",IDC_COUNTRY,11,108,64,9
-    EDITTEXT        IDC_INFO_COUNTRY,77,105,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
-    LTEXT           "CRC1:",IDC_CRC1,11,121,64,9
-    EDITTEXT        IDC_INFO_CRC1,77,120,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
-    LTEXT           "CRC2:",IDC_CRC2,11,137,64,9
-    EDITTEXT        IDC_INFO_CRC2,77,135,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
-    LTEXT           "CIC Chip:",IDC_CIC_CHIP,11,153,64,9
-    EDITTEXT        IDC_INFO_CIC,77,150,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
+    LTEXT           "CRC1:",IDC_CRC1,11,92,64,9
+    EDITTEXT        IDC_INFO_CRC1,77,90,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
+    LTEXT           "CRC2:",IDC_CRC2,11,108,64,9
+    EDITTEXT        IDC_INFO_CRC2,77,105,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
+    LTEXT           "CIC Chip:",IDC_CIC_CHIP,11,121,64,9
+    EDITTEXT        IDC_INFO_CIC,77,120,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
     LTEXT           "Location:",IDC_LOCATION,11,45,64,10
     EDITTEXT        IDC_INFO_LOCATION,77,45,139,12,ES_AUTOHSCROLL | ES_READONLY
 END
@@ -229,7 +224,7 @@ BEGIN
     PUSHBUTTON      "Down",IDC_DOWN,186,166,36,11
 END
 
-IDD_About_Ini DIALOG 0, 0, 185, 250
+IDD_About_Ini DIALOG 0, 0, 185, 172
 STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About PJ64 Databases"
 FONT 8, "MS Sans Serif"
@@ -248,12 +243,6 @@ BEGIN
     LTEXT           "Author:",IDC_LAN_AUTHOR,13,14,166,8
     LTEXT           "Version:",IDC_LAN_VERSION,13,24,166,8
     LTEXT           "Date:",IDC_LAN_DATE,13,34,166,8
-    GROUPBOX        "Extension Database (.EDB)",IDC_RDX,6,168,175,59
-    LTEXT           "Author:",IDC_RDX_AUTHOR,13,178,166,8
-    LTEXT           "Version:",IDC_RDX_VERSION,13,188,166,8
-    PUSHBUTTON      "visit home page",IDC_RDX_HOME,15,210,163,13
-    LTEXT           "Date:",IDC_RDX_DATE,13,198,166,8
-    PUSHBUTTON      "OK",IDOK,134,230,47,13
 END
 
 IDD_Settings_General DIALOG 0, 0, 231, 206
