Working on WIP 3

--- a/Source Code/PJ64.rc
+++ b/Source Code/PJ64.rc
@@ -121,7 +121,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     CTEXT           "",IDC_INFO,4,5,223,52
-    CONTROL         "Overwrite default settings with ones from RDB?",IDC_USEINI,
+    CONTROL         "RDB ROM Settings",IDC_USEINI,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,165,218,11
     GROUPBOX        "Core Defaults",IDC_CORE_DEFAULTS,2,57,228,138
     LTEXT           "CPU core style:",IDC_TEXT2,9,69,108,12
@@ -293,7 +293,7 @@ BEGIN
     LTEXT           "Counter Factor:",IDC_COUNTFACT_TEXT,11,119,111,10
     COMBOBOX        IDC_COUNTFACT,124,116,99,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Larger Compile Buffer",IDC_LARGE_COMPILE_BUFFER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,132,111,11
-    CONTROL         "Use TLB",IDC_USE_TLB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,132,99,11
+    CONTROL         "TLB",IDC_USE_TLB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,132,99,11
     CONTROL         "Register caching",IDC_ROM_REGCACHE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,145,111,11
     CONTROL         "SP Hack",IDC_ROM_SPHACK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,145,99,11
     CONTROL         "Delay SI Interrupt",IDC_DELAY_SI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,158,99,11
