WIP 3 (I am under time constraints and don't have time to test this at all)

--- a/Source Code/PJ64.rc
+++ b/Source Code/PJ64.rc
@@ -94,24 +94,23 @@ IDD_Settings_Directory DIALOG 0, 0, 231, 206
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
 FONT 8, "MS Sans Serif"
 BEGIN
-    GROUPBOX        "ROM Directory",IDC_DIR_FRAME2,7,43,217,38
-    CONTROL         "Last folder a ROM was opened from",IDC_ROM_DEFAULT,
-                    "Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,14,52,179,8
-    CONTROL         "",IDC_ROM_OTHER,"Button",BS_AUTORADIOBUTTON,14,63,11,12
-    EDITTEXT        IDC_ROM_DIR,26,62,170,12,ES_AUTOHSCROLL
-    PUSHBUTTON      "...",IDC_SELECT_ROM_DIR,201,62,14,12
-    GROUPBOX        "Save Data Directory",IDC_DIR_FRAME3,7,82,217,38
-    CONTROL         "$AppPath\\Save Data\\",IDC_AUTO_DEFAULT,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,14,92,179,8
-    CONTROL         "",IDC_AUTO_OTHER,"Button",BS_AUTORADIOBUTTON,14,103,11,12
-    EDITTEXT        IDC_AUTO_DIR,26,103,170,12,ES_AUTOHSCROLL
-    PUSHBUTTON      "...",IDC_SELECT_AUTO_DIR,201,103,14,12
-    GROUPBOX        "Save State Directory",IDC_DIR_FRAME4,7,121,217,38
-    CONTROL         "$AppPath\\Save States\\",IDC_INSTANT_DEFAULT,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,14,132,179,8
-    CONTROL         "",IDC_INSTANT_OTHER,"Button",BS_AUTORADIOBUTTON,14,143,11,12
-    EDITTEXT        IDC_INSTANT_DIR,26,142,170,12,ES_AUTOHSCROLL
-    PUSHBUTTON      "...",IDC_SELECT_INSTANT_DIR,202,142,14,12
+    GROUPBOX        "ROMs",IDC_DIR_FRAME2,7,4,217,38
+    CONTROL         "Last folder a ROM was opened from",IDC_ROM_DEFAULT,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,14,14,179,8
+    CONTROL         "",IDC_ROM_OTHER,"Button",BS_AUTORADIOBUTTON,14,25,11,12
+    EDITTEXT        IDC_ROM_DIR,26,25,170,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "...",IDC_SELECT_ROM_DIR,201,25,14,12
+    GROUPBOX        "Save Data",IDC_DIR_FRAME3,7,57,217,38
+    CONTROL         "$AppPath\\Save Data\\",IDC_AUTO_DEFAULT,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,14,67,179,8
+    CONTROL         "",IDC_AUTO_OTHER,"Button",BS_AUTORADIOBUTTON,14,78,11,12
+    EDITTEXT        IDC_AUTO_DIR,26,78,170,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "...",IDC_SELECT_AUTO_DIR,201,78,14,12
+	GROUPBOX        "Save States", IDC_DIR_FRAME4, 7, 109, 217, 38
+	CONTROL         "$AppPath\\Save States\\", IDC_INSTANT_DEFAULT, "Button", BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP, 14, 119, 179, 8
+	CONTROL         "", IDC_INSTANT_OTHER, "Button", BS_AUTORADIOBUTTON, 14, 130, 11, 12
+	EDITTEXT        IDC_INSTANT_DIR, 26, 130, 170, 12, ES_AUTOHSCROLL
+	PUSHBUTTON      "...", IDC_SELECT_INSTANT_DIR, 202, 130, 14, 12
     GROUPBOX        "Screenshots",IDC_DIR_FRAME5,7,161,217,38,WS_TABSTOP
-    CONTROL         "$AppPath\\Screenshots\\",IDC_SNAP_DEFAULT,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,14,172,179,8
+    CONTROL         "$AppPath\\Screenshots\\",IDC_SNAP_DEFAULT,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,14,171,179,8
     CONTROL         "",IDC_SNAP_OTHER,"Button",BS_AUTORADIOBUTTON,14,182,11,12
     EDITTEXT        IDC_SNAP_DIR,26,182,170,12,ES_AUTOHSCROLL
     PUSHBUTTON      "...",IDC_SELECT_SNAP_DIR,203,182,14,12
@@ -288,7 +287,7 @@ BEGIN
     COMBOBOX        IDC_RDRAM_SIZE, 124, 48, 99, 49, CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Advanced Block Linking:",IDC_BLOCK_LINKING_TEXT,11,83,111,10
     COMBOBOX        IDC_BLOCK_LINKING,124,82,99,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Game Save type:",IDC_SAVE_TYPE_TEXT,11,100,111,10
+    LTEXT           "Save type:",IDC_SAVE_TYPE_TEXT,11,100,111,10
     COMBOBOX        IDC_SAVE_TYPE,124,99,99,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Counter Factor:",IDC_COUNTFACT_TEXT,11,119,111,10
     COMBOBOX        IDC_COUNTFACT,124,116,99,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
@@ -299,7 +298,7 @@ BEGIN
     CONTROL         "Delay SI Interrupt",IDC_DELAY_SI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,158,99,11
     CONTROL         "Delay RDP Interrupt",IDC_DELAY_RDP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,171,111,11
     CONTROL         "Delay RSP Interrupt",IDC_DELAY_RSP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,171,99,11
-    CONTROL         "Emulate AI",IDC_EMULATE_AI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,158,111,11
+    CONTROL         "AI",IDC_EMULATE_AI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,158,111,11
     LTEXT           "Self-modifying Code Method:",IDC_SELFMOD_TEXT,11,66,111,10
     COMBOBOX        IDC_SELFMOD,124,65,99,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
