Correctly Implement Rom Browser Cheats
I removed this earlier because it wasn't behaving correctly with remember cheats off but I had the idea to only display it when remember cheats is on which works.

--- a/Source Code/PJ64.rc
+++ b/Source Code/PJ64.rc
@@ -529,6 +529,7 @@ BEGIN
         MENUITEM "Refresh ROM List",            ID_FILE_REFRESHROMLIST
         MENUITEM "Choose ROM Directory",        ID_FILE_ROMDIRECTORY
         MENUITEM "ROM Settings",                ID_EDITSETTINGS
+        MENUITEM "Cheats",                      ID_EDITCHEATS
     END
 END
 IDR_CHEAT_MENU MENU
