--- a/Source Code/PJ64.rc
+++ b/Source Code/PJ64.rc
@@ -434,6 +434,7 @@ BEGIN
     BEGIN
         MENUITEM "Reset\tF1",                  ID_CPU_RESET, GRAYED
         MENUITEM "Pause\tF2",                  ID_CPU_PAUSE, GRAYED
+	MENUITEM "Frame Advance\tCaps Lock",   ID_SYSTEM_ALTERNATEPAUSE, GRAYED
         MENUITEM "Screenshot\tF3",             ID_SYSTEM_GENERATEBITMAP, GRAYED
         MENUITEM SEPARATOR
         MENUITEM "Limit FPS\tF4",               ID_SYSTEM_LIMITFPS
