Let's push to have the ABL dropdown removed from the advanced tab and then see if we can implement counter factor default by see'ing how that's setup. This will help improve file size of the RDB by avoiding having to specify ABL off lines.

--- a/Source Code/PJ64.rc
+++ b/Source Code/PJ64.rc
@@ -501,7 +501,7 @@ BEGIN
     END
     POPUP "Options"
     BEGIN
-        MENUITEM "Full Screen\tEsc",     ID_OPTIONS_FULLSCREEN, GRAYED
+        MENUITEM "Full Screen\tEsc/Alt+Enter",     ID_OPTIONS_FULLSCREEN, GRAYED
         MENUITEM "Always On Top\tCtrl+A",     ID_OPTIONS_ALWAYSONTOP, GRAYED
         MENUITEM SEPARATOR
         MENUITEM "Configure Graphics Plugin\tCtrl+V",    ID_OPTIONS_CONFIG_GFX, GRAYED
