Let's make one more attempt to convert ABL into checkbox format so we can scrap on/off identifiers to reduce size

--- a/Source Code/PJ64.rc
+++ b/Source Code/PJ64.rc
@@ -119,20 +119,19 @@ IDD_Settings_Options DIALOGEX 0, 0, 231, 206
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    CTEXT           "a",IDC_INFO,4,5,223,52
     CONTROL         "a",IDC_USEINI,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,165,218,11
-    GROUPBOX        "",IDC_CORE_DEFAULTS,2,57,228,138
-    LTEXT           "a",IDC_TEXT2,9,69,108,12
-    COMBOBOX        IDC_CPU_TYPE,118,68,105,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,175,218,11
+    GROUPBOX        "",IDC_CORE_DEFAULTS,2,10,228,138
+    LTEXT           "a",IDC_TEXT2,9,32,108,12
+    COMBOBOX        IDC_CPU_TYPE,118,31,105,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "a",IDC_TEXT5,9,118,108,12
     COMBOBOX        IDC_CF,118,116,105,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "a",IDC_START_ON_ROM_OPEN,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,149,218,11
-    LTEXT           "a",IDC_TEXT3,9,101,108,12
-    COMBOBOX        IDC_SELFMOD,118,100,105,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "a",IDC_TEXT4,9,86,108,12
-    COMBOBOX        IDC_RDRAM_SIZE,118,84,105,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,159,218,11
+    LTEXT           "a",IDC_TEXT3,9,89,108,12
+    COMBOBOX        IDC_SELFMOD,118,88,105,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "a",IDC_TEXT4,9,61,108,12
+    COMBOBOX        IDC_RDRAM_SIZE,118,59,105,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
 END
 IDD_Cheats_List DIALOGEX 0, 0, 201, 221
 STYLE DS_SETFONT | DS_CONTROL | WS_CHILD
@@ -278,17 +277,18 @@ IDD_Settings_Rom DIALOGEX 0, 0, 233, 206
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
+	CTEXT           "a", IDC_INFO, 4, 1, 223, 52
     GROUPBOX        "",IDC_STATIC,4,14,224,180
     LTEXT           "a",IDC_CPU_TYPE_TEXT,11,33,111,10
     COMBOBOX        IDC_CPU_TYPE,118,31,105,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "a",IDC_MEMORY_SIZE_TEXT,11,49,111,10
     COMBOBOX        IDC_RDRAM_SIZE, 118, 48, 105, 49, CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "a",IDC_BLOCK_LINKING_TEXT,11,83,111,10
-    COMBOBOX        IDC_BLOCK_LINKING,118,82,105,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "a",IDC_BLOCK_LINKING_TEXT,11,119,111,10
+    COMBOBOX        IDC_BLOCK_LINKING,118,116,105,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "a",IDC_SAVE_TYPE_TEXT,11,100,111,10
     COMBOBOX        IDC_SAVE_TYPE,118,99,105,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "a",IDC_COUNTFACT_TEXT,11,119,111,10
-    COMBOBOX        IDC_COUNTFACT,118,116,105,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "a",IDC_COUNTFACT_TEXT,11,83,111,10
+    COMBOBOX        IDC_COUNTFACT,118,82,105,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     CONTROL         "a",IDC_LARGE_COMPILE_BUFFER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,132,106,11
     CONTROL         "a",IDC_USE_TLB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,118,132,99,11
     CONTROL         "a",IDC_ROM_REGCACHE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,145,106,11
@@ -514,10 +514,12 @@ BEGIN
     POPUP "a"
     BEGIN
         MENUITEM "a",                  ID_HELP_UNINSTALL
-        MENUITEM "a",                ID_HELP_ABOUTSETTINGFILES
+        MENUITEM "a",                  ID_HELP_SM64
         MENUITEM SEPARATOR
-        MENUITEM "a",                     ID_HELP_GUIDE
 	MENUITEM "a",			   ID_WEBPAGES
+        MENUITEM "a",                     ID_HELP_GUIDE
+        MENUITEM SEPARATOR
+        MENUITEM "a",                ID_HELP_ABOUTSETTINGFILES
     END
 END
 IDR_POPUP MENU
