--- a/Source Code/PJ64.rc
+++ b/Source Code/PJ64.rc
@@ -509,13 +509,17 @@ BEGIN
         MENUITEM "a",    ID_OPTIONS_CONFIG_CONTROL, GRAYED
         MENUITEM "a",        ID_OPTIONS_CONFIG_RSP, GRAYED
         MENUITEM SEPARATOR
+        POPUP "a",
+        BEGIN
+        MENUITEM "a",                  ID_HELP_UNINSTALL
+        MENUITEM "a",                  ID_HELP_STANDARD
+        MENUITEM "a",                  ID_HELP_SM64
+	END
+        MENUITEM SEPARATOR
         MENUITEM "a",           ID_OPTIONS_SETTINGS
     END
     POPUP "a"
     BEGIN
-        MENUITEM "a",                  ID_HELP_UNINSTALL
-        MENUITEM "a",                  ID_HELP_SM64
-        MENUITEM SEPARATOR
 	MENUITEM "a",			   ID_WEBPAGES
         MENUITEM "a",                     ID_HELP_GUIDE
         MENUITEM SEPARATOR
@@ -582,7 +586,10 @@ BEGIN
     "D",            ID_OPTIONS_CONFIG_CONTROL, VIRTKEY, CONTROL, NOINVERT
     "R",            ID_OPTIONS_CONFIG_RSP,  VIRTKEY, CONTROL, NOINVERT
     "T",            ID_OPTIONS_SETTINGS,    VIRTKEY, CONTROL, NOINVERT
- VK_F12,            ID_FILE_ENDEMULATION,   VIRTKEY, NOINVERT
+   VK_F12,          ID_FILE_ENDEMULATION,   VIRTKEY, NOINVERT
+    VK_F1,          ID_HELP_UNINSTALL, VIRTKEY, SHIFT, NOINVERT
+    VK_F2,          ID_HELP_STANDARD,      VIRTKEY, SHIFT, NOINVERT
+    VK_F3,	    ID_HELP_SM64,	VIRTKEY, SHIFT, NOINVERT
 END
 IDR_ROMBROWSER ACCELERATORS
 BEGIN
@@ -593,6 +600,9 @@ BEGIN
     "D",            ID_OPTIONS_CONFIG_CONTROL, VIRTKEY, CONTROL, NOINVERT
     "R",            ID_OPTIONS_CONFIG_RSP,  VIRTKEY, CONTROL, NOINVERT
     "T",            ID_OPTIONS_SETTINGS,    VIRTKEY, CONTROL, NOINVERT
+    VK_F1, ID_HELP_UNINSTALL, VIRTKEY, SHIFT, NOINVERT
+    VK_F2, ID_HELP_STANDARD, VIRTKEY, SHIFT, NOINVERT
+    VK_F3, ID_HELP_SM64, VIRTKEY, SHIFT, NOINVERT
     VK_F11,         ID_FILE_STARTEMULATION, VIRTKEY, NOINVERT
     VK_F5,          ID_FILE_REFRESHROMLIST, VIRTKEY, NOINVERT
 END
