--- a/Source Code/PJ64.rc
+++ b/Source Code/PJ64.rc
@@ -296,7 +296,7 @@ BEGIN
     CONTROL         "a",IDC_DELAY_SI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,118,158,99,11
     CONTROL         "a",IDC_DELAY_RDP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,171,106,11
     CONTROL         "a",IDC_DELAY_RSP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,118,171,99,11
-    CONTROL         "a",IDC_EMULATE_AI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,158,106,11
+
     LTEXT           "a",IDC_SELFMOD_TEXT,11,66,111,10
     COMBOBOX        IDC_SELFMOD,118,65,105,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
@@ -512,8 +512,10 @@ BEGIN
         POPUP "a",
         BEGIN
         MENUITEM "a",                  ID_HELP_UNINSTALL
+        MENUITEM SEPARATOR
         MENUITEM "a",                  ID_HELP_STANDARD
         MENUITEM "a",                  ID_HELP_SM64
+        MENUITEM "a",                  ID_HELP_SLOW
 	END
         MENUITEM SEPARATOR
         MENUITEM "a",           ID_OPTIONS_SETTINGS
@@ -590,6 +592,7 @@ BEGIN
     VK_F1,          ID_HELP_UNINSTALL, VIRTKEY, SHIFT, NOINVERT
     VK_F2,          ID_HELP_STANDARD,      VIRTKEY, SHIFT, NOINVERT
     VK_F3,	    ID_HELP_SM64,	VIRTKEY, SHIFT, NOINVERT
+    VK_F4,	    ID_HELP_SLOW,	VIRTKEY, SHIFT, NOINVERT
 END
 IDR_ROMBROWSER ACCELERATORS
 BEGIN
@@ -603,6 +606,7 @@ BEGIN
     VK_F1, ID_HELP_UNINSTALL, VIRTKEY, SHIFT, NOINVERT
     VK_F2, ID_HELP_STANDARD, VIRTKEY, SHIFT, NOINVERT
     VK_F3, ID_HELP_SM64, VIRTKEY, SHIFT, NOINVERT
+    VK_F4, ID_HELP_SLOW, VIRTKEY, SHIFT, NOINVERT
     VK_F11,         ID_FILE_STARTEMULATION, VIRTKEY, NOINVERT
     VK_F5,          ID_FILE_REFRESHROMLIST, VIRTKEY, NOINVERT
 END
