--- a/Source Code/PJ64.rc
+++ b/Source Code/PJ64.rc
@@ -152,8 +152,7 @@ BEGIN
     LTEXT           "a",IDC_NOTE,7,7,172,9
     LTEXT           "a",IDC_CHEAT_NAME,7,17,172,9
     LISTBOX         IDC_CHEAT_LIST,7,31,172,96,LBS_USETABSTOPS | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    DEFPUSHBUTTON   "OK",IDOK,74,132,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,129,132,50,14
+    DEFPUSHBUTTON   "a",IDOK,74,132,50,14
 END
 IDD_Settings_ShellInt DIALOG 0, 0, 231, 206
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
