--- a/Source Code/PJ64.rc
+++ b/Source Code/PJ64.rc
@@ -509,19 +509,18 @@ BEGIN
         POPUP "a",
         BEGIN
         MENUITEM "a",                  ID_HELP_UNINSTALL
-        MENUITEM SEPARATOR
         MENUITEM "a",                  ID_HELP_STANDARD
         MENUITEM "a",                  ID_HELP_SM64
         MENUITEM "a",                  ID_HELP_SLOW
+        MENUITEM SEPARATOR
+        MENUITEM "a",                  ID_REGEDIT
 	END
         MENUITEM SEPARATOR
         MENUITEM "a",           ID_OPTIONS_SETTINGS
     END
     POPUP "a"
     BEGIN
-	MENUITEM "a",			   ID_WEBPAGES
         MENUITEM "a",                     ID_HELP_GUIDE
-        MENUITEM SEPARATOR
         MENUITEM "a",                ID_HELP_ABOUTSETTINGFILES
     END
 END
@@ -590,6 +589,7 @@ BEGIN
     VK_F2,          ID_HELP_STANDARD,      VIRTKEY, SHIFT, NOINVERT
     VK_F3,	    ID_HELP_SM64,	VIRTKEY, SHIFT, NOINVERT
     VK_F4,	    ID_HELP_SLOW,	VIRTKEY, SHIFT, NOINVERT
+    "R",            ID_REGEDIT, VIRTKEY, SHIFT, NOINVERT
 END
 IDR_ROMBROWSER ACCELERATORS
 BEGIN
@@ -604,6 +604,7 @@ BEGIN
     VK_F2, ID_HELP_STANDARD, VIRTKEY, SHIFT, NOINVERT
     VK_F3, ID_HELP_SM64, VIRTKEY, SHIFT, NOINVERT
     VK_F4, ID_HELP_SLOW, VIRTKEY, SHIFT, NOINVERT
+    "R",            ID_REGEDIT, VIRTKEY, SHIFT, NOINVERT
     VK_F11,         ID_FILE_STARTEMULATION, VIRTKEY, NOINVERT
     VK_F5,          ID_FILE_REFRESHROMLIST, VIRTKEY, NOINVERT
 END
